--- a/Action_Potentials_Website_Self/Index.html
+++ b/Action_Potentials_Website_Self/Index.html
@@ -432,7 +432,7 @@
                                     <span class="icon flaticon-hospital"></span>
                                 </div>
                                 <h3><a href="join-us.html">Volunteering</a></h3>
-                                <div class="text">Lorem Ipsum is simply my text of the printing and Ipsum is the Ipsum is simply.</div>
+                                <div class="text">We are looking for passionate, dedicated volunteers to join this initiative. Get in touch with us and start teaching other interested students.</div>
                                 <a href="join-us.html" class="read-more">Read More</a>
                             </div>
                         </div>
@@ -446,7 +446,7 @@
                                     <span class="icon flaticon-apartment-1"></span>
                                 </div>
                                 <h3><a href="projects-research.html">Research Projects</a></h3>
-                                <div class="text">Lorem Ipsum is simply my text of the printing and Ipsum is the Ipsum is simply.</div>
+                                <div class="text">Conduct your own research (does not have to be STEM-related), analyze the result of this research, and publish them online with us.</div>
                                 <a href="projects-research.html" class="read-more">Read More</a>
                             </div>
                         </div>
