--- a/Action_Potentials_Website_Self/Index.html
+++ b/Action_Potentials_Website_Self/Index.html
@@ -460,7 +460,7 @@
                                     <span class="icon flaticon-hotel"></span>
                                 </div>
                                 <h3><a href="services-publishing.html">Publishing Resources</a></h3>
-                                <div class="text">Lorem Ipsum is simply my text of the printing and Ipsum is the Ipsum is simply.</div>
+                                <div class="text">If you had created or wrote something STEM-related, show us your outcome, and let us publish it on our sites, either as a blog or a project. </div>
                                 <a href="services-publishing.html" class="read-more">Read More</a>
                             </div>
                         </div>
