--- a/Action_Potentials_Website_Self/feedback.html
+++ b/Action_Potentials_Website_Self/feedback.html
@@ -166,6 +166,54 @@
         </section>
         <!--End Page Title-->
 
+        <!--Disfunction Placeholder-->
+        <div class="text">Unfortunately, the following form is disfunctional. The button below will redirect you to a functional form. Sorry for your inconvenience.</div>
+        <span class="txt"><a href="https://forms.gle/oVPk6FWDpWS5nYY1A">Feedback</a></span>
+        <!--Disfunction Placeholder-->
+
+        <!-- Contact Form Section -->
+        <section class="contact-form-section" style="background-image:url(images/1.jpg)">
+            <div class="auto-container">
+
+                <!-- Form Column -->
+                <div class="form-column col-lg-7 col-md-12 col-sm-12">
+                    <div class="inner-column">
+
+                        <!-- Contact Form -->
+                        <div class="contact-form">
+
+                            <!--Contact Form-->
+                            <form method="post" action="https://forms.gle/oVPk6FWDpWS5nYY1A" id="contact-form">
+                                <div class="row clearfix">
+                                    <div class="form-group col-lg-6 col-md-6 col-sm-12">
+                                        <input type="text" name="username" placeholder="Your name" required>
+                                    </div>
+
+                                    <div class="form-group col-lg-6 col-md-6 col-sm-12">
+                                        <input type="text" name="email" placeholder="Email address" required>
+                                    </div>
+
+                                    <div class="form-group col-lg-12 col-md-12 col-sm-12">
+                                        <input type="text" name="subject" placeholder="Subject" required>
+                                    </div>
+
+                                    <div class="form-group col-lg-12 col-md-12 col-sm-12">
+                                        <textarea name="message" placeholder="Message"></textarea>
+                                    </div>
+
+                                    <div class="form-group col-lg-12 col-md-12 col-sm-12">
+                                        <button class="theme-btn btn-style-one" type="submit" name="submit-form"><span class="txt">Submit now</span></button>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+
+                    </div>
+                </div>
+
+            </div>
+        </section>
+        <!-- End Contact Form Section -->
         <!--Main Footer-->
         <footer class="main-footer">
             <div class="auto-container">
