--- a/Action_Potentials_Website_Self/contact.html
+++ b/Action_Potentials_Website_Self/contact.html
@@ -176,7 +176,7 @@
             <div class="contact-button">
             <h6>The following form is currently disfunctional. Please click the following button to be redirected to a functional form. Sorry for your inconvenience.</h6>
             <br>
-            <a href="https://forms.gle/GgySVfemqDBZqgQd7" class="theme-btn btn-style-two "><span class="txt ">Learn More</span></a>
+            <a href="https://forms.gle/GgySVfemqDBZqgQd7" class="theme-btn btn-style-two "><span class="txt ">Redirect</span></a>
             </div>
             <br>
             <!--End Placeholder-->
