--- a/Action_Potentials_Website_Self/join-us.html
+++ b/Action_Potentials_Website_Self/join-us.html
@@ -183,8 +183,8 @@
 
             <!-- Sec Title -->
 			<div class="sec-title">
-				<h2>Get In Touch</h2>
-				<div class="text"><div class="contact-text">Do you have anything in your mind to let us know?  Kindly don't delay to connect to us by means of our contact form.</div></div>
+				<h2>Joinus now!</h2>
+				<div class="text"><div class="contact-text">Would you like to join us and start volunteering here?  Kindly don't delay to connect to us by means of this form.</div></div>
 			</div>
 			
 			<div class="row clearfix">
