--- a/Action_Potentials_Website_Self/summer-program.html
+++ b/Action_Potentials_Website_Self/summer-program.html
@@ -178,8 +178,8 @@
                             <h2>This Program</h2>
                             <div class="bold-text">Immersive, interactive, online. Learning STEM-related subjects is made easy with Action Potentials</div>
                             <div class="text">
-                                <p>This summer, we welcomes interested students between grade 5-9 to attend our inaugral Summer STEM Program. Our founders, Rayan Ramadan and Grace Yu, offer to teach students the basics of front-end and back-end website development,
-                                    block coding, and computer-aided design. This program is completely free and all interested students may attend.
+                                <p>This summer, we welcome interested students between grade 5-9 to attend our inaugral Summer STEM Program. Our founders, Rayan Ramadan and Grace Yu, offer to teach students the basics of front-end and back-end website development,
+                                    block coding, and computer-aided design. This program is free-of-cost and all interested students may attend.
                                 </p>
                                 <p>Our program
                                 </p>
@@ -261,46 +261,55 @@
                                     <td>2</td>
                                     <td>July 26, 2021</td>
                                     <td>HTML5 and CSS Lesson 2</td>
+                                    <td>Basic tags in HTML and CSS</td>
                                 </tr>
                                 <tr>
                                     <td>2</td>
                                     <td>July 28, 2021</td>
                                     <td>Scratch and JS Lesson 2</td>
+                                    <td>Basic scratch syntax and structure</td>
                                 </tr>
                                 <tr>
                                     <td>2</td>
                                     <td>July 30, 2021</td>
                                     <td>Computer-Aided Design Lesson 2</td>
+                                    <td>Geometric constraints and basic features</td>
                                 </tr>
                                 <tr>
                                     <td>3</td>
                                     <td>August 2, 2021</td>
                                     <td>HTML5 and CSS Lesson 3</td>
+                                    <td>Start working on a project with instructor support</td>
                                 </tr>
                                 <tr>
                                     <td>3</td>
                                     <td>August 4, 2021</td>
                                     <td>Scratch and JS Lesson 3</td>
+                                    <td>If, for, and while looping systems</td>
                                 </tr>
                                 <tr>
                                     <td>3</td>
                                     <td>August 6, 2021</td>
                                     <td>Computer-Aided Design Lesson 3</td>
+                                    <td>Advanced modeling features and arrays</td>
                                 </tr>
                                 <tr>
                                     <td>4</td>
                                     <td>August 9, 2021</td>
                                     <td>HTML5 and CSS Lesson 4</td>
+                                    <td>Finish their project and present it to other students</td>
                                 </tr>
                                 <tr>
                                     <td>4</td>
                                     <td>August 11, 2021</td>
                                     <td>Scratch and JS Lesson 4</td>
+                                    <td>Work on a interactive game with instructor support</td>
                                 </tr>
                                 <tr>
                                     <td>4</td>
                                     <td>August 13, 2021</td>
                                     <td>Computer-Aided Design Lesson 4</td>
+                                    <td>Introduction to render and engineering script</td>
                                 </tr>
                             </table>
                         </div>
