--- a/Action_Potentials_Website_Self/service.html
+++ b/Action_Potentials_Website_Self/service.html
@@ -227,7 +227,7 @@
 								<li><a href="blog-coding.html">Coding</a></li>
 								<li><a href="blog-ideas.html">Ideas</a></li>
 								<li><a href="blog-projects.html">Research Projects</a></li>
-								<li class="active"><a href="blog-robotics.html">Robotics</a></li>
+								<li><a href="blog-robotics.html">Robotics</a></li>
 								<li><a href="blog-stories.html">STEM Stories</a></li>
 							</ul>
 						</div>
