--- a/Action_Potentials_Website_Self/summer-program.html
+++ b/Action_Potentials_Website_Self/summer-program.html
@@ -181,7 +181,8 @@
                                 <p>This summer, we welcome interested students between grade 5-9 to attend our inaugral Summer STEM Program. Our founders, Rayan Ramadan and Grace Yu, offer to teach students the basics of front-end and back-end website development,
                                     block coding, and computer-aided design. This program is free-of-cost and all interested students may attend.
                                 </p>
-                                <p>Our program
+                                <p>Our program will officially start on the 19th of July, will last for four weeks, and offer an optional two-week extension program. In this program, you will attend a two-hour ZOOM class for each of the disciplines each
+                                    week, and be expected to do some self study between each class. In the extension program, it will be more self-led, as you will complete your own project.
                                 </p>
                             </div>
                         </div>
@@ -203,16 +204,17 @@
 
         <!--Program Detail-->
         <div class="auto-container ">
-            <h2>Our Program</h2>
+            <h2>Timeline, Syllabus, and Details</h2>
             <div class="row clearfix ">
                 <div class="content-column col-lg-12 col-md-12 col-sm-12 ">
                     <div class="inner-column ">
-                        <div class="bold-text ">Timeline, Syllabus, and Details</div>
                     </div>
+                    <br>
+                    <div class="text">Each week, you will be expected to attend all ZOOM classes. If you are absent for any classes, please contact us, and we will send you some learning resources for you to catch up. This program is highly self-led - the more you work,
+                        the more you will learn. We pro</div>
                     <div class="table ">
                         <div class="text ">
                             <br>
-                            <p>Information placeholder</p>
                             <h5>Timeline</h5>
                             <table width="100% ">
                                 <tr>
