--- a/Action_Potentials_Website_Self/Index.html
+++ b/Action_Potentials_Website_Self/Index.html
@@ -246,7 +246,8 @@
                                 </div>
                                 <h3>Rayan Ramadan</h3>
                                 <div class="title ">A Determined, Principled Leader and a Curious, Proactive Learner </div>
-                                <div class="text ">Rayan Ramadan is a dedicated, proactive student whose interests lie in molecular engineering and nuclear physics. She loves debating, challenging herself to growth, solving mathematical problems, lasagna, and pizza. She have a wide variety of interests, both in STEM and in arts. Curious and passionate, she enjoys research and public speaking, and she dreams to become a scientist in the future. </div>
+                                <div class="text ">Rayan Ramadan is a dedicated, proactive student whose interests lie in molecular engineering and nuclear physics. She loves debating, challenging herself to growth, solving mathematical problems, lasagna, and pizza. She
+                                    have a wide variety of interests, both in STEM and in arts. Curious and passionate, she enjoys research and public speaking, and she dreams to become a scientist in the future. </div>
                             </div>
                         </div>
                     </div>
@@ -262,8 +263,8 @@
                                 </div>
                                 <h3>Grace Yu</h3>
                                 <div class="title ">A Committed and Passionate Engineer with Experience in CAD, Robotics, Data Science</div>
-                                <div class="text ">Grace is a person who loves experiments and mathematics. Her passion lies in automotives, aerodynamics, and the mathematical models of different kinds of chaos. She used to compete in KF Senior class karting, thus she is especially
-                                    interested in automotive racing, both as a driver and as an engineer. In the future, she desires to become an aerodynamicist for a factory team in GT Racing. </div>
+                                <div class="text ">Grace is a person who loves experiments and mathematics. Her passion lies in automotives, aerodynamics, and the mathematical models of different kinds of chaos. She used to compete in KF Senior class karting, thus she is
+                                    especially interested in automotive racing, both as a driver and as an engineer. In the future, she desires to become an aerodynamicist for a factory team in GT Racing. </div>
                             </div>
                         </div>
                     </div>
@@ -279,7 +280,8 @@
                                 </div>
                                 <h3>Rayan Ramadan</h3>
                                 <div class="title ">A Determined, Principled Leader and a Curious, Proactive Learner</div>
-                                <div class="text ">Rayan Ramadan is a dedicated, proactive student whose interests lie in molecular engineering and nuclear physics. She loves debating, challenging herself to growth, solving mathematical problems, lasagna, and pizza. She have a wide variety of interests, both in STEM and in arts. Curious and passionate, she enjoys research and public speaking, and she dreams to become a scientist in the future. </div>
+                                <div class="text ">Rayan Ramadan is a dedicated, proactive student whose interests lie in molecular engineering and nuclear physics. She loves debating, challenging herself to growth, solving mathematical problems, lasagna, and pizza. She
+                                    have a wide variety of interests, both in STEM and in arts. Curious and passionate, she enjoys research and public speaking, and she dreams to become a scientist in the future. </div>
                             </div>
                         </div>
                     </div>
@@ -559,7 +561,9 @@
             <div class="auto-container ">
                 <!-- Sec Title -->
                 <div class="sec-title ">
-                    <h2>Checkout our Research and Blogs.</h2>
+                    <a href="blog.html">
+                        <u class="blog-title"><h2>Checkout our Research and Blogs.</h2></u>
+                    </a>
                     <div class="text ">Stay updated with our program updates and the latest high school research projects.</div>
                 </div>
                 <!--PlaceHolder line-->
