Rayan must send me the images

--- a/Action_Potentials_Website_Self/contact.html
+++ b/Action_Potentials_Website_Self/contact.html
@@ -94,7 +94,7 @@
                                                 <li><a href="join-us.html">Join us</a></li>
                                             </ul>
                                         </li>
-                                        <li class="dropdown"><a href="services-publishing.html">Projects</a>
+                                        <li class="dropdown"><a href="projects.html">Projects</a>
                                             <ul>
                                                 <li><a href="projects-research.html">Research Projects</a></li>
                                                 <li><a href="projects-studies.html">Studies</a></li>
@@ -184,7 +184,7 @@
 
                 <!-- Sec Title -->
                 <div class="sec-title">
-                    <h2>Get In Touch</h2>
+                    <h2 class="contact-text">Get In Touch</h2>
                     <div class="text">
                         <div class="contact-text">Do you have anything in your mind to let us know? Kindly don't delay to connect to us by means of our contact form.</div>
                     </div>
