Rayan send me the image

--- a/Action_Potentials_Website_Self/blog.html
+++ b/Action_Potentials_Website_Self/blog.html
@@ -174,8 +174,8 @@
 
                     <!--Filter-->
                     <div class="filters clearfix">
-                        <div class="text text-portfolio"><i><b>More contents are coming soon!</b></i></div>
-
+                        <h3 class="text-portfolio"><i><b>More contents are coming soon!</b></i></h3>
+                        <br>
                         <ul class="filter-tabs filter-btns text-center clearfix">
                             <li class="active filter" data-role="button" data-filter="all">All Works</li>
                             <li class="filter" data-role="button" data-filter=".CAD">Computer-Aided Design</li>
