--- a/Action_Potentials_Website_Self/Index.html
+++ b/Action_Potentials_Website_Self/Index.html
@@ -241,7 +241,7 @@
                             <div class="content ">
                                 <div class="image-outer ">
                                     <div class="image ">
-                                        <img src="images/resource/author-1.jpg " alt=" " />
+                                        <img src="images/Rayan.jpg " alt=" " />
                                     </div>
                                 </div>
                                 <h3>Rayan Ramadan</h3>
@@ -258,7 +258,7 @@
                             <div class="content ">
                                 <div class="image-outer ">
                                     <div class="image ">
-                                        <img src="images/resource/author-2.jpg " alt=" " />
+                                        <img src="images/Grace.jpg " alt=" " />
                                     </div>
                                 </div>
                                 <h3>Grace Yu</h3>
@@ -275,7 +275,7 @@
                             <div class="content ">
                                 <div class="image-outer ">
                                     <div class="image ">
-                                        <img src="images/resource/author-1.jpg " alt=" " />
+                                        <img src="images/Rayan.jpg " alt=" " />
                                     </div>
                                 </div>
                                 <h3>Rayan Ramadan</h3>
@@ -292,7 +292,7 @@
                             <div class="content ">
                                 <div class="image-outer ">
                                     <div class="image ">
-                                        <img src="images/resource/author-2.jpg " alt=" " />
+                                        <img src="images/Grace.jpg " alt=" " />
                                     </div>
                                 </div>
                                 <h3>Grace Yu</h3>
