--- a/Action_Potentials_Website_Self/about.html
+++ b/Action_Potentials_Website_Self/about.html
@@ -166,6 +166,170 @@
         </section>
         <!--End Page Title-->
 
+        <!--Sidebar Page Container-->
+        <div class="sidebar-page-container">
+            <div class="auto-container">
+                <div class="row clearfix">
+
+                    <!--Content Side / Services Detail -->
+                    <div class="content-side col-xl-9 col-lg-8 col-md-12 col-sm-12">
+                        <div class="services-detail">
+                            <div class="inner-box">
+                                <div class="text">
+                                    <!-- Two Column -->
+                                    <div class="two-column">
+                                        <div class="row clearfix">
+                                            <div class="column col-lg-4 col-md-4 col-sm-12">
+                                                <div class="image">
+                                                    <img src="images/resource/service-26.jpg" alt="" />
+                                                </div>
+                                                <div class="image">
+                                                    <img src="images/resource/service-27.jpg" alt="" />
+                                                </div>
+                                            </div>
+                                            <div class="content-column col-lg-8 col-md-8 col-sm-12">
+                                                <div class="inner-column">
+                                                    <h3>Immersive, interactive, online. Learning STEM-related subjects is made easy with Action Potentials</h3>
+                                                    <p>Completely synergize resource taxing relationships via premier niche markets. Professionally cultivate one-to-one customer service with robust ideas. Dynamically innovate resource-leveling customer service
+                                                        for state of the art customer service.</p>
+                                                    <p>Objectively innovate empowered manufactured products whereas parallel platforms. Holisticly predominate extensible testing procedures for reliable supply chains. Dramatically engage top-line web services.</p>
+                                                    <p>Completely synergize resource taxing relationships via premier niche markets. Professionally cultivate one-to-one customer service with robust ideas. Dynamically innovate resource-leveling customer service
+                                                        for state of the art customer service.Objectively innovate empowered manufactured products whereas parallel platforms. Holisticly predominate .</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <h4>An interesting, student-led foundation that advocates for teaching STEM subjects for all</h4>
+                                    <ul class="list-style-four">
+                                        <li>- Interactive, online learning</li>
+                                        <li>- Free and accessible</li>
+                                        <li>- Taught by high school students</li>
+                                        <li>- Supported by our first-hand experience</li>
+                                    </ul>
+                                    <div class="service-contact-box">Take Actions and Reach Your Potentials!. <br> <a href="contact.html">Contact our team</a> to learn more!</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!--Sidebar Side-->
+                    <div class="sidebar-side col-xl-3 col-lg-4 col-md-12 col-sm-12">
+                        <aside class="sidebar">
+
+                            <!-- Sidebar Widget / List Widget-->
+                            <div class="sidebar-widget list-widget">
+                                <!-- Services List -->
+                                <a href="blog.html">
+                                    <h2>Our Blogs</h2>
+                                </a>
+                                <ul class="services-list">
+                                    <li><a href="blog-CAD.html">CAD</a></li>
+                                    <li><a href="blog-coding.html">Coding</a></li>
+                                    <li><a href="blog-ideas.html">Ideas</a></li>
+                                    <li><a href="blog-projects.html">Research Projects</a></li>
+                                    <li><a href="blog-robotics.html">Robotics</a></li>
+                                    <li><a href="blog-stories.html">STEM Stories</a></li>
+                                </ul>
+                            </div>
+
+                            <!-- Sidebar Widget / Contact Widget-->
+                            <div class="sidebar-widget contact-widget">
+                                <div class="widget-content" style="background-image: url(images/code.jpeg);">
+                                    <h3>Get in touch with us</h3>
+                                    <a href="contact.html" class="theme-btn btn-style-one"><span class="txt">contact us</span></a>
+                                </div>
+                            </div>
+                            <p class="code-text">Image from (https://medium.com/syncedreview/deep-tabnine-a-powerful-ai-code-autocompleter-for-developers-70454a5953fe)</p>
+                        </aside>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+        <!-- Testimonial Section -->
+        <section class="testimonial-section ">
+            <div class="auto-container ">
+                <!-- Sec Title -->
+                <div class="sec-title-two centered ">
+                    <h2>Meet our Founders</h2>
+                    <div class="title-text "></div>
+                </div>
+
+                <div class="testimonial-carousel owl-carousel owl-theme ">
+
+                    <!-- Testimonial Block -->
+                    <div class="testimonial-block ">
+                        <div class="inner-box ">
+                            <div class="content ">
+                                <div class="image-outer ">
+                                    <div class="image ">
+                                        <img src="images/Rayan.jpg " alt=" " />
+                                    </div>
+                                </div>
+                                <h3>Rayan Ramadan</h3>
+                                <div class="title ">A Determined, Principled Leader and a Curious, Proactive Learner </div>
+                                <div class="text ">Rayan Ramadan is a dedicated, proactive student whose interests lie in molecular engineering and nuclear physics. She loves debating, challenging herself to growth, solving mathematical problems, lasagna, and pizza. She
+                                    have a wide variety of interests, both in STEM and in arts. Curious and passionate, she enjoys research and public speaking, and she dreams to become a scientist in the future. </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Testimonial Block -->
+                    <div class="testimonial-block ">
+                        <div class="inner-box ">
+                            <div class="content ">
+                                <div class="image-outer ">
+                                    <div class="image ">
+                                        <img src="images/Grace.jpg " alt=" " />
+                                    </div>
+                                </div>
+                                <h3>Grace Yu</h3>
+                                <div class="title ">A Committed and Passionate Engineer with Experience in CAD, Robotics, Data Science</div>
+                                <div class="text ">Grace is a person who loves experiments and mathematics. Her passion lies in automotives, aerodynamics, and the mathematical models of different kinds of chaos. She used to compete in KF Senior class karting, thus she is
+                                    especially interested in automotive racing, both as a driver and as an engineer. In the future, she desires to become an aerodynamicist for a factory team in GT Racing. </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Testimonial Block -->
+                    <div class="testimonial-block ">
+                        <div class="inner-box ">
+                            <div class="content ">
+                                <div class="image-outer ">
+                                    <div class="image ">
+                                        <img src="images/Rayan.jpg " alt=" " />
+                                    </div>
+                                </div>
+                                <h3>Rayan Ramadan</h3>
+                                <div class="title ">A Determined, Principled Leader and a Curious, Proactive Learner</div>
+                                <div class="text ">Rayan Ramadan is a dedicated, proactive student whose interests lie in molecular engineering and nuclear physics. She loves debating, challenging herself to growth, solving mathematical problems, lasagna, and pizza. She
+                                    have a wide variety of interests, both in STEM and in arts. Curious and passionate, she enjoys research and public speaking, and she dreams to become a scientist in the future. </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Testimonial Block -->
+                    <div class="testimonial-block ">
+                        <div class="inner-box ">
+                            <div class="content ">
+                                <div class="image-outer ">
+                                    <div class="image ">
+                                        <img src="images/Grace.jpg " alt=" " />
+                                    </div>
+                                </div>
+                                <h3>Grace Yu</h3>
+                                <div class="title ">A Committed and Passionate Engineer with Experience in CAD, Robotics, Data Science</div>
+                                <div class="text ">Grace is a person who loves experiments and mathematics. Her passion lies in automotives, aerodynamics, and the mathematical models of different kinds of chaos. Used to compete in KF Senior class karting, she is especially
+                                    interested in automotive racing, both as a driver and as an engineer. In the future, she desires to become an aerodynamicist for a factory team in GT Racing.</div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <!-- End Testimonial Section -->
 
         <!--Main Footer-->
         <footer class="main-footer">
