--- a/Action_Potentials_Website_Self/service.html
+++ b/Action_Potentials_Website_Self/service.html
@@ -199,12 +199,10 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <h4>Best Interior Designer In Your Local Area</h4>
+                                    <h4>An interesting, student-led foundation that advocates for teaching STEM subjects for all</h4>
                                     <ul class="list-style-four">
                                         <li>- Interactive, online learning</li>
                                         <li>- Free and accessible</li>
-                                        <li>- Interesting syllabus and activities</li>
-                                        <li>- Conduct your own STEM experiments/projects</li>
                                         <li>- Taught by high school students</li>
                                         <li>- Supported by our first-hand experience</li>
                                     </ul>
