--- a/Action_Potentials_Website_Self/projects.html
+++ b/Action_Potentials_Website_Self/projects.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Our Inspirations | Action Potentials - A Student-Led STEM Environment</title>
+    <title>Projects | Action Potentials - A Student-Led STEM Environment</title>
     <!-- Stylesheets -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
