--- a/Action_Potentials_Website_Self/blog_how_to_manage_your_time.html
+++ b/Action_Potentials_Website_Self/blog_how_to_manage_your_time.html
@@ -286,6 +286,9 @@
                                 <p class="text">Currently unavailable, sorry for your inconvenience.</p>
                             </div>
 
+                            <h2><a href="blog.html">See more Blogs</a></h1>
+                            <br>
+
                             <!--Blog Category Widget-->
                             <div class="sidebar-widget sidebar-blog-category">
                                 <div class="sidebar-title">
