--- a/Action_Potentials_Website_Self/projects-studies.html
+++ b/Action_Potentials_Website_Self/projects-studies.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title> Studies | Action Potentials - A Student-Led STEM Environment</title>
+    <title>Studies | Action Potentials - A Student-Led STEM Environment</title>
     <!-- Stylesheets -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -159,13 +159,95 @@
             <div class="auto-container">
                 <h2>Studies</h2>
                 <ul class="page-breadcrumb">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="services-publishing.html">Projects</a></li>
+                    <li><a href="index.html">home</a></li>
+                    <li><a href="projects.html">Projects</a></li>
                     <li>Studies</li>
                 </ul>
             </div>
         </section>
         <!--End Page Title-->
+
+        <!-- Portfolio Page Section -->
+        <section class="portfolio-page-section">
+            <div class="auto-container">
+                <!--MixitUp Galery-->
+                <div class="mixitup-gallery">
+
+                    <!--Filter-->
+                    <div class="filters clearfix">
+                        <h3 class="text-portfolio"><i><b>More contents are coming soon!</b></i></h3>
+                        <br>
+                        <ul class="filter-tabs filter-btns text-center clearfix">
+                            <li class="active filter" data-role="button" data-filter="all">All Works</li>
+                            <li class="filter" data-role="button" data-filter=".research">Research Projects</li>
+                            <li class="filter" data-role="button" data-filter=".studies">Studies</li>
+                            <li class="filter" data-role="button" data-filter=".creative">Creative Projects</li>
+                            <li class="filter" data-role="button" data-filter=".other">Other Projects</li>
+                            <li class="filter" data-role="button" data-filter=".ongoing">Ongoing Projects by Our Founders</li>
+
+                    </div>
+
+                    <div class="filter-list row clearfix">
+
+                        <!-- Gallery Item -->
+                        <div class="gallery-item mix all idea col-lg-4 col-md-6 col-sm-12">
+                            <div class="inner-box">
+                                <figure class="image-box">
+                                    <img src="images/rim.JPG" alt="">
+                                    <!--Overlay Box-->
+                                    <div class="overlay-box">
+                                        <div class="overlay-inner">
+                                            <div class="content">
+                                                <h3><a href="blog_how_to_make_anything.html">How to Make Anything?</a></h3>
+                                                <a href="blog_how_to_make_anything.html" class="link"><span class="icon flaticon-unlink"></span></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </figure>
+                            </div>
+                        </div>
+
+                        <!-- Gallery Item -->
+                        <div class="gallery-item mix all project col-lg-4 col-md-6 col-sm-12">
+                            <div class="inner-box">
+                                <figure class="image-box">
+                                    <img src="images/prion.JPG" alt="">
+                                    <!--Overlay Box-->
+                                    <div class="overlay-box">
+                                        <div class="overlay-inner">
+                                            <div class="content">
+                                                <h3><a href="blog_prion_disease.html">Protein Folding and Prion Diseases</a></h3>
+                                                <a href="blog_prion_disease.html" class="link"><span class="icon flaticon-unlink"></span></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </figure>
+                            </div>
+                        </div>
+
+                        <!-- Gallery Item -->
+                        <div class="gallery-item mix all idea col-lg-4 col-md-6 col-sm-12">
+                            <div class="inner-box">
+                                <figure class="image-box">
+                                    <img src="images/time-management.jpg" alt="">
+                                    <!--Overlay Box-->
+                                    <div class="overlay-box">
+                                        <div class="overlay-inner">
+                                            <div class="content">
+                                                <h3><a href="blog_how_to_manage_your_time.html">How to Manage Your Time? (And Learn STEM)</a></h3>
+                                                <a href="blog_how_to_manage_your_time.html" class="link"><span class="icon flaticon-unlink"></span></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </figure>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- End Story Section -->
 
         <!--Main Footer-->
         <footer class="main-footer">
@@ -238,7 +320,7 @@
                                         <div class="text">Let us know what you think</div>
                                         <!-- Newsletter Form -->
                                         <div class="newsletter-form">
-                                            <form method="post" action="templateshub.net">
+                                            <form method="post" action="#">
                                                 <div class="form-group">
                                                     <input type="email" name="email" value="" placeholder="Enter your email address">
                                                     <div class="form-submission-button">
@@ -315,18 +397,21 @@
             </div>
         </div>
 
+
         <!--Scroll to top-->
         <script src="js/jquery.js"></script>
         <script src="js/popper.min.js"></script>
         <script src="js/jquery-ui.js"></script>
         <script src="js/bootstrap.min.js"></script>
         <script src="js/jquery.fancybox.js"></script>
-        <script src="js/isotope.js"></script>
         <script src="js/owl.js"></script>
         <script src="js/wow.js"></script>
+        <script src="js/mixitup.js"></script>
         <script src="js/appear.js"></script>
         <script src="js/scrollbar.js"></script>
         <script src="js/script.js"></script>
 </body>
+
+<!-- stella-orre/projects-classic.html  30 Nov 2019 03:51:15 GMT -->
 
 </html>
