--- a/Action_Potentials_Website_Self/projects.html
+++ b/Action_Potentials_Website_Self/projects.html
@@ -174,32 +174,31 @@
 
                     <!--Filter-->
                     <div class="filters clearfix">
-
+                        <h3 class="text-portfolio"><i><b>More contents are coming soon!</b></i></h3>
+                        <br>
                         <ul class="filter-tabs filter-btns text-center clearfix">
                             <li class="active filter" data-role="button" data-filter="all">All Works</li>
-                            <li class="filter" data-role="button" data-filter=".residential-interior">Residential Interior</li>
-                            <li class="filter" data-role="button" data-filter=".interior">Commercial Interior</li>
-                            <li class="filter" data-role="button" data-filter=".kitchen">Modular Kitchen</li>
-                            <li class="filter" data-role="button" data-filter=".wardrobe">Modern Wardrobe</li>
-                            <li class="filter" data-role="button" data-filter=".furniture">Modern Furniture</li>
-                        </ul>
+                            <li class="filter" data-role="button" data-filter=".research">Research Projects</li>
+                            <li class="filter" data-role="button" data-filter=".studies">Studies</li>
+                            <li class="filter" data-role="button" data-filter=".creative">Creative Projects</li>
+                            <li class="filter" data-role="button" data-filter=".other">Other Projects</li>
+                            <li class="filter" data-role="button" data-filter=".ongoing">Ongoing Projects by Our Founders</li>
 
                     </div>
 
                     <div class="filter-list row clearfix">
 
                         <!-- Gallery Item -->
-                        <div class="gallery-item mix all wardrobe kitchen col-lg-4 col-md-6 col-sm-12">
+                        <div class="gallery-item mix all idea col-lg-4 col-md-6 col-sm-12">
                             <div class="inner-box">
                                 <figure class="image-box">
-                                    <img src="images/gallery/17.jpg" alt="">
+                                    <img src="images/rim.JPG" alt="">
                                     <!--Overlay Box-->
                                     <div class="overlay-box">
                                         <div class="overlay-inner">
                                             <div class="content">
-                                                <h3><a href="projects-fullwidth.html">Modular Kitchen</a></h3>
-                                                <a href="images/gallery/17.jpg" data-fancybox="gallery-4" data-caption="" class="link"><span class="icon flaticon-magnifying-glass-1"></span></a>
-                                                <a href="projects-fullwidth.html" class="link"><span class="icon flaticon-unlink"></span></a>
+                                                <h3><a href="blog_how_to_make_anything.html">How to Make Anything?</a></h3>
+                                                <a href="blog_how_to_make_anything.html" class="link"><span class="icon flaticon-unlink"></span></a>
                                             </div>
                                         </div>
                                     </div>
@@ -208,17 +207,16 @@
                         </div>
 
                         <!-- Gallery Item -->
-                        <div class="gallery-item mix all wardrobe kitchen col-lg-4 col-md-6 col-sm-12">
+                        <div class="gallery-item mix all project col-lg-4 col-md-6 col-sm-12">
                             <div class="inner-box">
                                 <figure class="image-box">
-                                    <img src="images/gallery/18.jpg" alt="">
+                                    <img src="images/prion.JPG" alt="">
                                     <!--Overlay Box-->
                                     <div class="overlay-box">
                                         <div class="overlay-inner">
                                             <div class="content">
-                                                <h3><a href="projects-fullwidth.html">Modular Kitchen</a></h3>
-                                                <a href="images/gallery/18.jpg" data-fancybox="gallery-4" data-caption="" class="link"><span class="icon flaticon-magnifying-glass-1"></span></a>
-                                                <a href="projects-fullwidth.html" class="link"><span class="icon flaticon-unlink"></span></a>
+                                                <h3><a href="blog_prion_disease.html">Protein Folding and Prion Diseases</a></h3>
+                                                <a href="blog_prion_disease.html" class="link"><span class="icon flaticon-unlink"></span></a>
                                             </div>
                                         </div>
                                     </div>
@@ -227,131 +225,16 @@
                         </div>
 
                         <!-- Gallery Item -->
-                        <div class="gallery-item mix all wardrobe residential-interior interior col-lg-4 col-md-6 col-sm-12">
+                        <div class="gallery-item mix all idea col-lg-4 col-md-6 col-sm-12">
                             <div class="inner-box">
                                 <figure class="image-box">
-                                    <img src="images/gallery/19.jpg" alt="">
+                                    <img src="images/time-management.jpg" alt="">
                                     <!--Overlay Box-->
                                     <div class="overlay-box">
                                         <div class="overlay-inner">
                                             <div class="content">
-                                                <h3><a href="projects-fullwidth.html">Modular Kitchen</a></h3>
-                                                <a href="images/gallery/19.jpg" data-fancybox="gallery-4" data-caption="" class="link"><span class="icon flaticon-magnifying-glass-1"></span></a>
-                                                <a href="projects-fullwidth.html" class="link"><span class="icon flaticon-unlink"></span></a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </figure>
-                            </div>
-                        </div>
-
-                        <!-- Gallery Item -->
-                        <div class="gallery-item mix all wardrobe furniture kitchen col-lg-4 col-md-6 col-sm-12">
-                            <div class="inner-box">
-                                <figure class="image-box">
-                                    <img src="images/gallery/20.jpg" alt="">
-                                    <!--Overlay Box-->
-                                    <div class="overlay-box">
-                                        <div class="overlay-inner">
-                                            <div class="content">
-                                                <h3><a href="projects-fullwidth.html">Modular Kitchen</a></h3>
-                                                <a href="images/gallery/20.jpg" data-fancybox="gallery-4" data-caption="" class="link"><span class="icon flaticon-magnifying-glass-1"></span></a>
-                                                <a href="projects-fullwidth.html" class="link"><span class="icon flaticon-unlink"></span></a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </figure>
-                            </div>
-                        </div>
-
-                        <!-- Gallery Item -->
-                        <div class="gallery-item mix all interior residential-interior col-lg-4 col-md-6 col-sm-12">
-                            <div class="inner-box">
-                                <figure class="image-box">
-                                    <img src="images/gallery/21.jpg" alt="">
-                                    <!--Overlay Box-->
-                                    <div class="overlay-box">
-                                        <div class="overlay-inner">
-                                            <div class="content">
-                                                <h3><a href="projects-fullwidth.html">Modular Kitchen</a></h3>
-                                                <a href="images/gallery/21.jpg" data-fancybox="gallery-4" data-caption="" class="link"><span class="icon flaticon-magnifying-glass-1"></span></a>
-                                                <a href="projects-fullwidth.html" class="link"><span class="icon flaticon-unlink"></span></a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </figure>
-                            </div>
-                        </div>
-
-                        <!-- Gallery Item -->
-                        <div class="gallery-item mix all wardrobe furniture kitchen col-lg-4 col-md-6 col-sm-12">
-                            <div class="inner-box">
-                                <figure class="image-box">
-                                    <img src="images/gallery/22.jpg" alt="">
-                                    <!--Overlay Box-->
-                                    <div class="overlay-box">
-                                        <div class="overlay-inner">
-                                            <div class="content">
-                                                <h3><a href="projects-fullwidth.html">Modular Kitchen</a></h3>
-                                                <a href="images/gallery/22.jpg" data-fancybox="gallery-4" data-caption="" class="link"><span class="icon flaticon-magnifying-glass-1"></span></a>
-                                                <a href="projects-fullwidth.html" class="link"><span class="icon flaticon-unlink"></span></a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </figure>
-                            </div>
-                        </div>
-
-                        <!-- Gallery Item -->
-                        <div class="gallery-item mix all interior furniture col-lg-4 col-md-6 col-sm-12">
-                            <div class="inner-box">
-                                <figure class="image-box">
-                                    <img src="images/gallery/23.jpg" alt="">
-                                    <!--Overlay Box-->
-                                    <div class="overlay-box">
-                                        <div class="overlay-inner">
-                                            <div class="content">
-                                                <h3><a href="projects-fullwidth.html">Modular Kitchen</a></h3>
-                                                <a href="images/gallery/23.jpg" data-fancybox="gallery-4" data-caption="" class="link"><span class="icon flaticon-magnifying-glass-1"></span></a>
-                                                <a href="projects-fullwidth.html" class="link"><span class="icon flaticon-unlink"></span></a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </figure>
-                            </div>
-                        </div>
-
-                        <!-- Gallery Item -->
-                        <div class="gallery-item mix all furniture kitchen col-lg-4 col-md-6 col-sm-12">
-                            <div class="inner-box">
-                                <figure class="image-box">
-                                    <img src="images/gallery/24.jpg" alt="">
-                                    <!--Overlay Box-->
-                                    <div class="overlay-box">
-                                        <div class="overlay-inner">
-                                            <div class="content">
-                                                <h3><a href="projects-fullwidth.html">Modular Kitchen</a></h3>
-                                                <a href="images/gallery/24.jpg" data-fancybox="gallery-4" data-caption="" class="link"><span class="icon flaticon-magnifying-glass-1"></span></a>
-                                                <a href="projects-fullwidth.html" class="link"><span class="icon flaticon-unlink"></span></a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </figure>
-                            </div>
-                        </div>
-
-                        <!-- Gallery Item -->
-                        <div class="gallery-item mix all furniture col-lg-4 col-md-6 col-sm-12">
-                            <div class="inner-box">
-                                <figure class="image-box">
-                                    <img src="images/gallery/25.jpg" alt="">
-                                    <!--Overlay Box-->
-                                    <div class="overlay-box">
-                                        <div class="overlay-inner">
-                                            <div class="content">
-                                                <h3><a href="projects-fullwidth.html">Modular Kitchen</a></h3>
-                                                <a href="images/gallery/25.jpg" data-fancybox="gallery-4" data-caption="" class="link"><span class="icon flaticon-magnifying-glass-1"></span></a>
-                                                <a href="projects-fullwidth.html" class="link"><span class="icon flaticon-unlink"></span></a>
+                                                <h3><a href="blog_how_to_manage_your_time.html">How to Manage Your Time? (And Learn STEM)</a></h3>
+                                                <a href="blog_how_to_manage_your_time.html" class="link"><span class="icon flaticon-unlink"></span></a>
                                             </div>
                                         </div>
                                     </div>
@@ -360,7 +243,6 @@
                         </div>
 
                     </div>
-
                 </div>
             </div>
         </section>
